--- a/style.css
+++ b/style.css
@@ -34,16 +34,15 @@ body{
     }
   .form{
     padding-top: 5%;
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: auto;
     background-color: #b4e4ff9c;
     border-radius: 5%;
     display: grid;
-    box-shadow: 0px 0px 15git pull origin master
-    px rgb(0, 0, 0);
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
 
   }
-  input { 
+  .inputField { 
     margin: 5%;
     border-radius:15px;
     outline: none;
@@ -85,4 +84,34 @@ body{
   input:focus{
     outline: none;
     box-shadow: 0px 0px 18px rgb(0, 0, 0);
+  }
+  .radioWrapper{
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+
+  @media only screen and (max-width: 600px) {
+    #myVideo {
+      position: fixed;
+      min-width: 100%; 
+      min-height: 100%;
+      z-index: -1;
+    }
+    .logo{
+      width: 200px;
+      text-align: center;
+      margin-bottom: 5%;
+    }
+    .form{
+      padding-top: 5%;
+      width: auto;
+      height: 500px;
+      background-color: #b4e4ff9c;
+      border-radius: 5%;
+      display: grid;
+      box-shadow: 0px 0px 15git pull origin master
+      px rgb(0, 0, 0);
+  
+    }
+
   }
